--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -33,7 +33,8 @@
     "react": "^19.0.0",
     "react-datepicker": "^4.24.0",
     "react-dom": "^19.0.0",
-    "superjson": "^2.2.1"
+    "superjson": "^2.2.1",
+    "prisma": "5.14.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.37.0",
@@ -44,7 +45,6 @@
     "autoprefixer": "^10.4.14",
     "eslint": "7.32.0",
     "postcss": "^8.4.24",
-    "prisma": "5.14.0",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
