--- a/apps/example/.env
+++ b/apps/example/.env
@@ -14,4 +14,4 @@
 POSTGRES_PRISMA_URL="postgresql://postgres.lhrtghihwhxxfmfargpv:qeydyDYm!2d@qHp@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 
 # Direct connection to the database. Used for migrations.
-POSTGRES_URL_NON_POOLING="postgresql://postgres.lhrtghihwhxxfmfargpv:qeydyDYm!2d@qHp@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
+POSTGRES_URL_NON_POOLING="postgresql://postgres.lhrtghihwhxxfmfargpv:qeydyDYm!2d@qHp@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"npm 
