--- a/apps/example/.env
+++ b/apps/example/.env
@@ -13,5 +13,4 @@
 # Connect to Supabase via connection pooling with Supavisor.
 POSTGRES_PRISMA_URL="postgresql://postgres.lhrtghihwhxxfmfargpv:qeydyDYm!2d@qHp@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 
-# Direct connection to the database. Used for migrations.
-POSTGRES_URL_NON_POOLING="postgresql://postgres.lhrtghihwhxxfmfargpv:qeydyDYm!2d@qHp@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"npm 
+POSTGRES_URL_NON_POOLING="postgresql://postgres.lhrtghihwhxxfmfargpv:qeydyDYm!2d@qHp@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres" 
