--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -22,8 +22,8 @@
     "@headlessui/tailwindcss": "^0.2.1",
     "@heroicons/react": "^2.0.18",
     "@picocss/pico": "^1.5.7",
-    "@premieroctet/next-admin": "^7.1.1",
-    "@premieroctet/next-admin-generator-prisma": "^0.0.1",
+    "@premieroctet/next-admin": "workspace:*",
+    "@premieroctet/next-admin-generator-prisma": "workspace:*",
     "@prisma/client": "5.14.0",
     "@tremor/react": "^3.2.2",
     "next": "^15.1.0",
